# SpeedyNote

./: .SRCINFO  .gitignore  ButtonMappingTypes.cpp  ButtonMappingTypes.h  CMakeLists.txt  CMakeLists_windowsarm64.txt  ControlPanelDialog.cpp  ControlPanelDialog.h  ControllerMappingDialog.cpp  Docker.md  Dockerfile  FLATPAK-DESKTOP-INTEGRATION.md  FLATPAK-DISTRIBUTION.md  FLATPAK-IMPROVEMENTS.md  FLATPAK-PACKAGING.md  FindPoppler.cmake  FindPoppler_ARM64.cmake  InkCanvas.cpp  InkCanvas.h  LICENSE  Main.cpp  MainWindow.cpp  MainWindow.h  MarkdownWindow.cpp  MarkdownWindow.h  MarkdownWindowManager.cpp  MarkdownWindowManager.h  PACKAGING-SUMMARY.md  PDF_ASSOCIATION_README.md  PKGBUILD  PdfOpenDialog.cpp  PdfOpenDialog.h  QML.md  README-Linux.md  README.md  RecentNotebooksDialog.cpp  RecentNotebooksManager.cpp  RecentNotebooksManager.h  SDLControllerManager.cpp  SDLControllerManager.h  (+30 more)
.github/workflows/: build-darwin.yml  build-linux.yml  build-packages.yml  build-windows.yml  build.yml  test-docker.yml
docs/: EFFICIENT_PANNING_IMPLEMENTATION.md  SpeedyNote_Darwin_Build_en.md  SpeedyNote_MacOS_build.md  SpeedyNote_Windows_ARM64_Build_en.md  SpeedyNote_Windows_Build_en.md  SpeedyNote_macOS_Build_en.md
docs/zh_Hans/: FindPoppler.cmake  SpeedyNote_Darwin_Build_zh-Hans.md  SpeedyNote_Windows_Build_zh-CN.md  SpeedyNote_Windows_Build_zh-Hans.md  build.md
docs/zh_Hans/old/: build.md  run.md
markdown/: markdownhighlighter.cpp  markdownhighlighter.h
readme/: Docker.zh-Hans.md  zh_Hans.md
resources/icons/: mainicon.icns
resources/translations/: app_es.qm  app_es.ts  app_fr.qm  app_fr.ts  app_zh.qm  app_zh.ts
source/: ButtonMappingTypes.cpp  ButtonMappingTypes.h  ControlPanelDialog.cpp  ControlPanelDialog.h  ControllerMappingDialog.cpp  ControllerMappingDialog.h  InkCanvas.cpp  InkCanvas.h  KeyCaptureDialog.cpp  KeyCaptureDialog.h  LauncherWindow.cpp  LauncherWindow.h  Main.cpp  MainWindow.cpp  MainWindow.h  MarkdownNoteEntry.cpp  MarkdownNoteEntry.h  MarkdownNotesSidebar.cpp  MarkdownNotesSidebar.h  MarkdownWindow.cpp  MarkdownWindow.h  MarkdownWindowManager.cpp  MarkdownWindowManager.h  PdfOpenDialog.cpp  PdfOpenDialog.h  PdfRelinkDialog.cpp  PdfRelinkDialog.h  PictureWindow.cpp  PictureWindow.h  PictureWindowManager.cpp  PictureWindowManager.h  RecentNotebooksDialog.cpp  RecentNotebooksDialog.h  RecentNotebooksManager.cpp  RecentNotebooksManager.h  SDLControllerManager.cpp  SimpleAudio.cpp  SimpleAudio.h  SpnPackageManager.cpp  SpnPackageManager.h
